--- a/cliente/.classpath
+++ b/cliente/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/dominio"/>
 	<classpathentry kind="lib" path="/servidor/librerias/gson-2.2.2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/servidor"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
